# goncharovskiy_m_n

./: README.md  hw-05-03.cpp
goncharovskiy_m_n/: 0004a.cpp  0136a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0617a.cpp  0705a.cpp  0886b.cpp  0915a.cpp  0935b.cpp  0978a.cpp  1017a.cpp  1100.cpp  1165b.cpp  1330a.cpp  1352a.cpp  1399b.cpp  1512c.cpp  1520b.cpp  1585a.cpp  1649a.cpp  1669d.cpp  1671a.cpp  1675c.cpp  1678a.cpp  1680b.cpp  1690d.cpp  1692c.cpp  1701a.cpp  1729a.cpp  1744.cpp  1744d.cpp  CMakeLists.txt  Rational.cpp  bpm_22_4_1.cpp  bpm_22_4_2.cpp  bpm_22_4_3.cpp  cat-n-mouse(1).cpp  hw-05-01.cpp  (+7 more)
goncharovskiy_m_n/geom/: CMakeLists.txt  geom.cpp  geom.h
goncharovskiy_m_n/rational_lib/: CMakeLists.txt  rational.cpp  rational.h
goncharovskiy_m_n/vectors_lib/: cat.cpp  modelling.cpp  vectors.cpp  vectors.h
